# word_generator

./: .gitignore  Cargo.toml  LICENSE  README.md  json_sample_config.json  main_config.json
src/: config.rs  main.rs  word.rs
