[package]

name = "word_generator"
version = "0.1.0"
authors = ["Sean Hagar <rcix2010@gmail.com>"]

[dependencies.rand]
git = "https://github.com/rust-lang/rand.git"

[dependencies.rustc-serialize]
rustc-serialize = "0.3.10"

[dependencies.regex]
regex = "0.1.30"

[dependencies.unicode-segmentation]
unicode-segmentation = "0.1.0"
